[package]
name = "tor_minimal_messaging_protocol"
version = "0.0.1"
edition = "2021"

[dependencies]
rustyline = "10.0.0"
libtor = "47.8.0+0.4.7.x"
arti-client = "0.7.0"
tor-stream = "0.3.0"
pkg-config = "0.3.26"
file = "1.1.2"
autotools = "0.2.5"
libtool = "0.1.1"
btfs = "0.0.4"
openssl = "0.10.42"
